# Agent---Rep

./: .gitignore  Anchor.toml  DEMO_SCRIPT.md  README.md  SETUP.md  package.json  post-forum-v2.js  post-forum-v3.js  post-forum.js  tsconfig.json
.github/workflows/: deploy-devnet.yml
agent-bot/: README.md  package-lock.json  package.json  paper-agent.js
demo/: run-demo.js
frontend/: .gitignore  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/agent/[id]/: page.tsx
frontend/app/api/: _kv.ts
frontend/app/api/eval/: _store.ts
frontend/app/api/eval/account/: route.ts
frontend/app/api/eval/create/: route.ts
frontend/app/api/eval/rotate/: route.ts
frontend/app/api/eval/trades/: route.ts
frontend/app/api/eval/trades/close/: route.ts
frontend/app/api/eval/trades/open/: route.ts
frontend/app/api/price/: route.ts
frontend/app/api/public/: _note.txt
frontend/app/api/public/agent/: route.ts
frontend/app/api/public/agents/: route.ts
frontend/app/api/room/: _store.ts
frontend/app/api/room/agents/: route.ts
frontend/app/api/room/humans/: route.ts
frontend/app/dashboard/: page.tsx
frontend/app/explore/: page.tsx
frontend/app/register/: page.tsx
frontend/app/room/: page.tsx
frontend/app/room/agents/: page.tsx
frontend/app/room/humans/: page.tsx
frontend/components/: Navbar.tsx  Providers.tsx
frontend/lib/: eval.ts
programs/agent-rep/: Cargo.toml
programs/agent-rep/src/: lib.rs
scripts/: demo.ts  deploy.sh
sdk/src/: cli.ts  client.ts  index.ts  types.ts
tests/: agent-rep.ts
