[package]
name = "agent-rep"
version = "0.1.0"
description = "On-Chain Agent Reputation Protocol for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agent_rep"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
